# cookies-site-utils

./: LICENSE  README.md  pyproject.toml  sync_hash.py
.github/workflows/: action.yml
cookies_site_utils/: __init__.py  __main__.py  article_helper.py  builder.py  core.py  soup_util.py
cookies_site_utils/resources/: __init__.py  funcs.js  style.css
tests/: .last_counts.toml  test_article_helper.py  test_builder.py  test_core.py  test_soup_util.py
tests/docs/: index.html
tests/docs/articles/: fuga.html
tests/docs/categories/: fugafuga.html
tests/templates/: category_template.html  index_template.html
