[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookies_site_utils"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="CookieBox26", email="cookie-box@cookie-box.info"}]
dependencies = [
    "beautifulsoup4",
    "jinja2",
    "shirotsubaki",
    "toml",
]

[project.scripts]
ah = "cookies_site_utils.article_helper:main"
