[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookies_site_utils"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "CookieBox26", email = "cookie-box@cookie-box.info" },
]
dependencies = [
  "beautifulsoup4",
  "jinja2",
  "shirotsubaki",
  "toml",
]

[project.optional-dependencies]
test = [
  "pytest",
  "ruff",
]

[project.scripts]
csu = "cookies_site_utils.__main__:main"

[tool.ruff.lint]
select = ["F401"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s] %(message)s"
